updates kitty cursor, background, and foreground colors

--- a/kitty.conf
+++ b/kitty.conf
@@ -163,8 +163,7 @@ font_size 14.0
 #: }}}
 
 #: Cursor customization {{{
-
-# cursor #cccccc
+# cursor #cdcecf
 
 #: Default cursor color
 
@@ -195,7 +194,7 @@ font_size 14.0
 #: that numbers smaller than repaint_delay will be limited to
 #: repaint_delay.
 
-# cursor_stop_blinking_after 15.0
+cursor_stop_blinking_after 0.0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
@@ -754,9 +753,8 @@ confirm_os_window_close 0
 #: }}}
 
 #: Color scheme {{{
-
-# foreground #dddddd
-# background #000000
+# foreground #cdcecf
+# background #192330
 
 #: The foreground and background colors
 
