wraps tmux plugins in a fold

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -143,7 +143,8 @@ set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q:Tc'
 
 set -g focus-events on
 
-# Plugins
+# Plugins {{{
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-copycat'
@@ -158,3 +159,5 @@ set -g @continuum-restore 'on' # Restore session when starting tmux
 set -g @continuum-save-interval '1' # minutes (default is 15)
 
 run -b '~/.tmux/plugins/tpm/tpm'
+
+}}}
