adds jump plugin to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -157,6 +157,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on' # Restore session when starting tmux
 set -g @continuum-save-interval '1' # minutes (default is 15)
 
-run -b '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'schasse/tmux-jump'
 
-}}}
+run -b ~/.tmux/plugins/tpm/tpm
+run -b ~/.tmux/plugins/tmux-jump/tmux-jump.tmux
+
+# }}}
