adds key mapping C-k for kill-server command

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,6 +94,8 @@ bind-key % split-window -v -c "#{pane_current_path}"
 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
+bind-key C-k kill-server
+
 bind-key C-h swap-window -t -1 \; select-window -t -1
 bind-key C-l swap-window -t +1 \; select-window -t +1
 
