adds tmux-fzf plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -147,19 +147,27 @@ set -g focus-events on
 
 # Plugins {{{
 
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tpm'
+
+# tmux-plugins/tmux-continuum config {{{
+
+set -g @continuum-restore 'on' # Restore session when starting tmux
+set -g @continuum-save-interval '1' # minutes (default is 15)
+
+# }}}
+
+# tmux-plugins/tmux-prefix-highlight {{{
+
 set -g @prefix_highlight_fg '255'
 set -g @prefix_highlight_bg '27'
 set -g @prefix_highlight_prefix_prompt '--Prefix--'
 
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on' # Restore session when starting tmux
-set -g @continuum-save-interval '1' # minutes (default is 15)
-
-set -g @plugin 'schasse/tmux-jump'
+# }}}
 
 run -b ~/.tmux/plugins/tpm/tpm
 run -b ~/.tmux/plugins/tmux-jump/tmux-jump.tmux
