--- a/kitty.conf
+++ b/kitty.conf
@@ -1077,7 +1077,7 @@ macos_quit_when_last_window_closed yes
 #: resizable on macOS. Changing this setting by reloading the config
 #: will only affect newly created windows.
 
-macos_thicken_font 0.1
+# macos_thicken_font 0.1
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
