--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -1,3 +1,4 @@
+tap "facebook/fb"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-fonts"
@@ -59,10 +60,12 @@ brew "trash"
 brew "vim"
 brew "watch"
 brew "wget"
+brew "facebook/fb/idb-companion"
 cask "android-commandlinetools"
 cask "docker"
 cask "font-hack-nerd-font"
 cask "karabiner-elements"
+cask "kitty"
 cask "ngrok"
 cask "react-native-debugger"
 cask "temurin"
