updates keybinding and window format for tmux fzf plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -154,6 +154,11 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tpm'
 
+# sainnhe/tmux-fzf {{{
+TMUX_FZF_LAUNCH_KEY="C-f"
+TMUX_FZF_WINDOW_FORMAT="#{window_name}"
+# }}}
+
 # tmux-plugins/tmux-continuum config {{{
 
 set -g @continuum-restore 'on' # Restore session when starting tmux
