--- a/.tmux.conf
+++ b/.tmux.conf
@@ -144,6 +144,8 @@ set -g default-terminal 'screen-256color'
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q:Tc'
 
 set -g focus-events on
+set -g display-time 4000
+setw -g aggressive-resize on
 
 # Plugins {{{
 
