--- a/.tmux.conf
+++ b/.tmux.conf
@@ -156,7 +156,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tpm'
 
 # sainnhe/tmux-fzf {{{
-TMUX_FZF_LAUNCH_KEY="C-f"
+TMUX_FZF_LAUNCH_KEY="f"
 TMUX_FZF_WINDOW_FORMAT="#{window_name}"
 # }}}
 
