--- a/.tmux.conf
+++ b/.tmux.conf
@@ -157,6 +157,7 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # sainnhe/tmux-fzf {{{
 TMUX_FZF_LAUNCH_KEY="f"
+TMUX_FZF_ORDER="window|session|pane|command|keybinding|clipboard|process"
 TMUX_FZF_WINDOW_FORMAT="#{window_name}"
 # }}}
 
