--- a/.tmux.conf
+++ b/.tmux.conf
@@ -156,9 +156,11 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tpm'
 
 # sainnhe/tmux-fzf {{{
-TMUX_FZF_LAUNCH_KEY="f"
-TMUX_FZF_ORDER="window|session|pane|command|keybinding|clipboard|process"
+TMUX_FZF_LAUNCH_KEY="C-f"
+TMUX_FZF_ORDER="session|window|pane|command|keybinding|clipboard|process"
 TMUX_FZF_WINDOW_FORMAT="#{window_name}"
+
+bind-key "f" run -b "~/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
 # }}}
 
 # tmux-plugins/tmux-continuum config {{{
