adds tmux session name to status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,7 +45,7 @@ set -g status-right-length 90
 set -g status-style "${WHITE__BLUE}"
 set -g status-left-style "${WHITE__BLUE}"
 set -g status-right-style "${WHITE__BLUE}"
-set -g status-left ""
+set -g status-left " #S "
 set -g status-right "#{prefix_highlight} ${LIGHT_BLUE__BLUE}${SEP_R}${BLACK__LIGHT_BLUE} #{pane_current_path} ${PURPLE__LIGHT_BLUE}${SEP_R}${BLACK__PURPLE} %m/%d/%Y %r "
 
 setw -g window-status-style "${WHITE__BLUE}"
