--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,7 @@ set -g status-left-style "${WHITE__BLUE}"
 set -g status-right-style "${WHITE__BLUE}"
 set -g status-left " #S "
 set -g status-right "#{prefix_highlight} ${LIGHT_BLUE__BLUE}${SEP_R}${BLACK__LIGHT_BLUE} #{pane_current_path} ${PURPLE__LIGHT_BLUE}${SEP_R}${BLACK__PURPLE} %m/%d/%Y %r "
+set -g status-position top
 
 setw -g window-status-style "${WHITE__BLUE}"
 setw -g window-status-separator ""
