simplifies tmux right status bar w/ date/time only

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,19 +12,14 @@ set -g set-titles on
 SEP_L=""
 SEP_R=""
 
-BLACK="#000000"
 BLUE="#39506d"
 GRAY="#303030"
 LIGHT_BLUE="#719cd6"
-PURPLE="#9d79d6"
 WHITE="#cdcecf"
 
 NIGHT_FOX_BG="#192330"
 
-BLACK__LIGHT_BLUE="#[fg=${BLACK},bg=${LIGHT_BLUE}]"
-BLACK__PURPLE="#[fg=${BLACK},bg=${PURPLE}]"
 LIGHT_BLUE__BLUE="#[fg=${LIGHT_BLUE},bg=${BLUE}]"
-PURPLE__LIGHT_BLUE="#[fg=${PURPLE},bg=${LIGHT_BLUE}]"
 WHITE__BLUE="fg=${WHITE},bg=${BLUE}"
 WHITE__BLUE__BOLD="#[fg=${WHITE},bg=${BLUE},bold]"
 WHITE__LIGHT_BLUE="#[fg=${WHITE},bg=${LIGHT_BLUE}]"
@@ -46,7 +41,7 @@ set -g status-style "${WHITE__BLUE}"
 set -g status-left-style "${WHITE__BLUE}"
 set -g status-right-style "${WHITE__BLUE}"
 set -g status-left " #S "
-set -g status-right "#{prefix_highlight} ${LIGHT_BLUE__BLUE}${SEP_R}${BLACK__LIGHT_BLUE} #{pane_current_path} ${PURPLE__LIGHT_BLUE}${SEP_R}${BLACK__PURPLE} %m/%d/%Y %r "
+set -g status-right "%m/%d/%Y %r "
 set -g status-position top
 
 setw -g window-status-style "${WHITE__BLUE}"
