updates window/active window display by removing separators and colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,26 +9,19 @@ set -g set-titles on
 
 # Variables {{{
 
-SEP_L=""
-SEP_R=""
-
 BLUE="#39506d"
 GRAY="#303030"
 LIGHT_BLUE="#719cd6"
+NIGHT_FOX_BG="#192330"
 WHITE="#cdcecf"
 
-NIGHT_FOX_BG="#192330"
-
-LIGHT_BLUE__BLUE="#[fg=${LIGHT_BLUE},bg=${BLUE}]"
 WHITE__BLUE="fg=${WHITE},bg=${BLUE}"
 WHITE__BLUE__BOLD="#[fg=${WHITE},bg=${BLUE},bold]"
-WHITE__LIGHT_BLUE="#[fg=${WHITE},bg=${LIGHT_BLUE}]"
-WHITE__LIGHT_BLUE__BOLD="#[fg=${WHITE},bg=${LIGHT_BLUE},bold]"
 
 # }}}
 
-setw -g window-status-current-format "${WHITE__LIGHT_BLUE__BOLD} #I ${LIGHT_BLUE__BLUE}${SEP_L}${WHITE__BLUE__BOLD} #W* "
-setw -g window-status-format "${WHITE__LIGHT_BLUE} #I ${LIGHT_BLUE__BLUE}${SEP_L}${LIGHT_BLUE__BLUE} #W "
+setw -g window-status-current-format "${WHITE__BLUE__BOLD} **#I #W** "
+setw -g window-status-format " #I #W "
 
 # Status Window styling {{{
 
