updates tmux theme to use night fox colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,52 +7,63 @@ set -g default-command $SHELL
 setw -g automatic-rename off
 set -g set-titles on
 
-# Variables {{{
+DATE="%Y-%m-%d"
+TIME="%r"
+WINDOW_NAME="#W"
+WINDOW_FLAGS="#F"
+WINDOW_NUMBER="#I"
 
-BLUE="#39506d"
+ARROW_SMALL_LEFT=""
+ARROW_SMALL_RIGHT=""
+ARROW_LARGE_LEFT=""
+ARROW_LARGE_RIGHT=""
+
+BLUE="#131a24"
 GRAY="#303030"
 LIGHT_BLUE="#719cd6"
-NIGHT_FOX_BG="#192330"
-WHITE="#cdcecf"
+DARK_BLUE="#192330"
+WHITE="#aeafb0"
 
-WHITE__BLUE="fg=${WHITE},bg=${BLUE}"
-WHITE__BLUE__BOLD="#[fg=${WHITE},bg=${BLUE},bold]"
-
-# }}}
-
-setw -g window-status-current-format "${WHITE__BLUE__BOLD} **#I #W** "
-setw -g window-status-format " #I #W "
-
-# Status Window styling {{{
+BLUE__BLUE="#[fg=${BLUE},bg=${BLUE},nobold,nounderscore,noitalics]"
+BLUE__LIGHT_BLUE="#[fg=${BLUE},bg=${LIGHT_BLUE},nobold,nounderscore,noitalics]"
+BLUE__WHITE="#[fg=${BLUE},bg=${WHITE},nobold,nounderscore,noitalics]"
+BLUE__WHITE__BOLD="#[fg=${BLUE},bg=${WHITE},bold,nounderscore,noitalics]"
+LIGHT_BLUE__BLUE="#[fg=${LIGHT_BLUE},bg=${BLUE},nobold,nounderscore,noitalics]"
+WHITE__BLUE="#[fg=${WHITE},bg=${BLUE},nobold,nounderscore,noitalics]"
+WHITE__DARK_BLUE="#[fg=${WHITE},bg=${DARK_BLUE},nobold,nounderscore,noitalics]"
+WHITE__GRAY="#[fg=${WHITE},bg=${GRAY},nobold,nounderscore,noitalics]"
 
 set -g status on
 set -g status-interval 1
-set -g status-justify "left"
-set -g status-left-length 60
-set -g status-right-length 90
-set -g status-style "${WHITE__BLUE}"
-set -g status-left-style "${WHITE__BLUE}"
-set -g status-right-style "${WHITE__BLUE}"
-set -g status-left " #S "
-set -g status-right "%m/%d/%Y %r "
 set -g status-position top
+set -g status-justify "centre"
 
-setw -g window-status-style "${WHITE__BLUE}"
-setw -g window-status-separator ""
-setw -g window-status-current-style "${WHITE__BLUE}"
-setw -g window-status-activity-style "${WHITE__BLUE}"
-setw -g window-status-bell-style "${WHITE__BLUE}"
-setw -g window-status-last-style "${WHITE__BLUE}"
+set -g mode-style "${BLUE__WHITE}"
+set -g message-style "${BLUE__WHITE}"
+set -g message-command-style "${BLUE__WHITE}"
 
-# }}}
+set -g status-left "${BLUE__LIGHT_BLUE} #S ${LIGHT_BLUE__BLUE}${ARROW_LARGE_RIGHT}"
+set -g status-left-length "100"
+set -g status-left-style NONE
+set -g status-right "${WHITE__BLUE}${ARROW_LARGE_LEFT}${BLUE__WHITE} ${DATE} ${ARROW_SMALL_LEFT} ${TIME} "
+set -g status-right-length "100"
+set -g status-right-style NONE
+set -g status-style "${BLUE__BLUE}"
 
-set -g window-style "fg=${WHITE},bg=${GRAY}"
-set -g window-active-style "fg=${WHITE},bg=${NIGHT_FOX_BG}"
-set -g pane-border-style "fg=${WHITE},bg=${GRAY}"
-set -g pane-active-border-style "fg=${WHITE},bg=${GRAY}"
-set -g message-command-style "${WHITE__BLUE}"
-set -g message-style "${WHITE__BLUE}"
-set -g mode-style "${WHITE__BLUE}"
+set -g window-status-separator ""
+set -g window-status-style "${LIGHT_BLUE__BLUE}"
+set -g window-status-format " ${WINDOW_NUMBER} ${ARROW_SMALL_RIGHT} ${WINDOW_NAME} ${BLUE__BLUE}${ARROW_LARGE_RIGHT}"
+set -g window-status-current-format "${BLUE__WHITE}${ARROW_LARGE_RIGHT}${BLUE__WHITE__BOLD} ${WINDOW_NUMBER} ${ARROW_SMALL_RIGHT} ${WINDOW_NAME} ${WINDOW_FLAGS} ${WHITE__BLUE}${ARROW_LARGE_RIGHT}"
+
+set -g window-status-current-style "${BLUE__BLUE}"
+set -g window-status-activity-style "${BLUE__BLUE}"
+set -g window-status-bell-style "${BLUE__BLUE}"
+set -g window-status-last-style "${BLUE__BLUE}"
+
+set -g window-style "${WHITE__GRAY}"
+set -g window-active-style "${WHITE__DARK_BLUE}"
+set -g pane-border-style "${WHITE__GRAY}"
+set -g pane-active-border-style "${WHITE__GRAY}"
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -170,3 +181,4 @@ set -g @prefix_highlight_prefix_prompt '--Prefix--'
 run -b ~/.tmux/plugins/tpm/tpm
 
 # }}}
+
