separates styles from status left/right variables

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,23 +24,27 @@ LIGHT_BLUE="#719cd6"
 DARK_BLUE="#192330"
 WHITE="#aeafb0"
 
+BLUE__BLUE__STYLE="fg=${BLUE},bg=${BLUE}"
+BLUE__WHITE__STYLE="fg=${BLUE},bg=${WHITE}"
+LIGHT_BLUE__BLUE__STYLE="fg=${LIGHT_BLUE},bg=${BLUE}"
+WHITE__DARK_BLUE__STYLE="fg=${WHITE},bg=${DARK_BLUE}"
+WHITE__GRAY__STYLE="fg=${WHITE},bg=${GRAY}"
+
 BLUE__BLUE="#[fg=${BLUE},bg=${BLUE},nobold,nounderscore,noitalics]"
 BLUE__LIGHT_BLUE="#[fg=${BLUE},bg=${LIGHT_BLUE},nobold,nounderscore,noitalics]"
 BLUE__WHITE="#[fg=${BLUE},bg=${WHITE},nobold,nounderscore,noitalics]"
 BLUE__WHITE__BOLD="#[fg=${BLUE},bg=${WHITE},bold,nounderscore,noitalics]"
 LIGHT_BLUE__BLUE="#[fg=${LIGHT_BLUE},bg=${BLUE},nobold,nounderscore,noitalics]"
 WHITE__BLUE="#[fg=${WHITE},bg=${BLUE},nobold,nounderscore,noitalics]"
-WHITE__DARK_BLUE="#[fg=${WHITE},bg=${DARK_BLUE},nobold,nounderscore,noitalics]"
-WHITE__GRAY="#[fg=${WHITE},bg=${GRAY},nobold,nounderscore,noitalics]"
 
 set -g status on
 set -g status-interval 1
 set -g status-position top
 set -g status-justify "centre"
 
-set -g mode-style "${BLUE__WHITE}"
-set -g message-style "${BLUE__WHITE}"
-set -g message-command-style "${BLUE__WHITE}"
+set -g mode-style "${BLUE__WHITE__STYLE}"
+set -g message-style "${BLUE__WHITE__STYLE}"
+set -g message-command-style "${BLUE__WHITE__STYLE}"
 
 set -g status-left "${BLUE__LIGHT_BLUE} #S ${LIGHT_BLUE__BLUE}${ARROW_LARGE_RIGHT}"
 set -g status-left-length "100"
@@ -48,22 +52,22 @@ set -g status-left-style NONE
 set -g status-right "${WHITE__BLUE}${ARROW_LARGE_LEFT}${BLUE__WHITE} ${DATE} ${ARROW_SMALL_LEFT} ${TIME} "
 set -g status-right-length "100"
 set -g status-right-style NONE
-set -g status-style "${BLUE__BLUE}"
+set -g status-style "${BLUE__BLUE__STYLE}"
 
 set -g window-status-separator ""
-set -g window-status-style "${LIGHT_BLUE__BLUE}"
+set -g window-status-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-format " ${WINDOW_NUMBER} ${ARROW_SMALL_RIGHT} ${WINDOW_NAME} ${BLUE__BLUE}${ARROW_LARGE_RIGHT}"
 set -g window-status-current-format "${BLUE__WHITE}${ARROW_LARGE_RIGHT}${BLUE__WHITE__BOLD} ${WINDOW_NUMBER} ${ARROW_SMALL_RIGHT} ${WINDOW_NAME} ${WINDOW_FLAGS} ${WHITE__BLUE}${ARROW_LARGE_RIGHT}"
 
-set -g window-status-current-style "${BLUE__BLUE}"
-set -g window-status-activity-style "${BLUE__BLUE}"
-set -g window-status-bell-style "${BLUE__BLUE}"
-set -g window-status-last-style "${BLUE__BLUE}"
+set -g window-status-current-style "${LIGHT_BLUE__BLUE__STYLE}"
+set -g window-status-activity-style "${LIGHT_BLUE__BLUE__STYLE}"
+set -g window-status-bell-style "${LIGHT_BLUE__BLUE__STYLE}"
+set -g window-status-last-style "${LIGHT_BLUE__BLUE__STYLE}"
 
-set -g window-style "${WHITE__GRAY}"
-set -g window-active-style "${WHITE__DARK_BLUE}"
-set -g pane-border-style "${WHITE__GRAY}"
-set -g pane-active-border-style "${WHITE__GRAY}"
+set -g window-style "${WHITE__GRAY__STYLE}"
+set -g window-active-style "${WHITE__DARK_BLUE__STYLE}"
+set -g pane-border-style "${WHITE__GRAY__STYLE}"
+set -g pane-active-border-style "${WHITE__GRAY__STYLE}"
 
 set -g base-index 1
 setw -g pane-base-index 1
