--- a/.tmux.conf
+++ b/.tmux.conf
@@ -160,7 +160,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tpm'
 
 # sainnhe/tmux-fzf {{{
-TMUX_FZF_LAUNCH_KEY="C-f"
+TMUX_FZF_LAUNCH_KEY="F"
 TMUX_FZF_ORDER="session|window|pane|command|keybinding|clipboard|process"
 TMUX_FZF_WINDOW_FORMAT="#{window_name}"
 
