--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -66,6 +66,11 @@ cask "docker"
 cask "font-hack-nerd-font"
 cask "karabiner-elements"
 cask "kitty"
+cask "mos"
 cask "ngrok"
 cask "react-native-debugger"
 cask "temurin"
+mas "GarageBand", id: 682658836
+mas "Microsoft Remote Desktop", id: 1295203466
+mas "Numbers", id: 409203825
+mas "Xcode", id: 497799835
