--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -1,9 +1,7 @@
 tap "facebook/fb"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
@@ -61,6 +59,7 @@ brew "vim"
 brew "watch"
 brew "wget"
 brew "facebook/fb/idb-companion"
+cask "amethyst"
 cask "android-commandlinetools"
 cask "docker"
 cask "font-hack-nerd-font"
