comments out shit option D for fullscreen shortcut in amethyst

--- a/.amethyst.yml
+++ b/.amethyst.yml
@@ -183,9 +183,9 @@ select-wide-layout:
   key: s
 
 # Select fullscreen layout
-select-fullscreen-layout:
-  mod: mod1
-  key: d
+# select-fullscreen-layout:
+#   mod: mod1
+#   key: d
 
 # Select column layout
 select-column-layout:
