updates Brewfile w/ forecast bar

--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -8,6 +8,9 @@ tap "jakehilborn/jakehilborn"
 tap "samuelmeuli/tap"
 brew "libpng"
 brew "webp"
+brew "pycparser"
+brew "cffi"
+brew "docutils"
 brew "python@3.11"
 brew "awscli"
 brew "berkeley-db", link: true
@@ -28,7 +31,6 @@ brew "gnutls"
 brew "netpbm"
 brew "librsvg"
 brew "graphviz"
-brew "python@3.10"
 brew "grip"
 brew "httpie"
 brew "imagemagick"
@@ -48,6 +50,7 @@ brew "nodenv"
 brew "openjdk@11"
 brew "p7zip"
 brew "perl"
+brew "python@3.10"
 brew "python@3.9"
 brew "ruby-build"
 brew "rbenv"
@@ -69,6 +72,7 @@ cask "mos"
 cask "ngrok"
 cask "react-native-debugger"
 cask "temurin"
+mas "Forecast Bar", id: 982710545
 mas "GarageBand", id: 682658836
 mas "Microsoft Remote Desktop", id: 1295203466
 mas "Numbers", id: 409203825
