--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,6 @@ set -g default-command $SHELL
 setw -g automatic-rename off
 set -g set-titles on
 
-DATE="%Y-%m-%d"
-TIME="%r"
 WINDOW_NAME="#W"
 WINDOW_FLAGS="#F"
 WINDOW_NUMBER="#I"
@@ -50,8 +48,8 @@ set -g message-command-style "${BLUE__WHITE__STYLE}"
 set -g status-left "${BLUE__LIGHT_BLUE} #S ${LIGHT_BLUE__BLUE}${ARROW_LARGE_RIGHT}"
 set -g status-left-length "100"
 set -g status-left-style NONE
-set -g status-right "${WHITE__BLUE}${ARROW_LARGE_LEFT}${BLUE__WHITE} ${DATE} ${ARROW_SMALL_LEFT} ${TIME} "
-set -g status-right-length "100"
+set -g status-right ""
+set -g status-right-length "0"
 set -g status-right-style NONE
 set -g status-style "${BLUE__BLUE__STYLE}"
 
