--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
-	excludesfile = /Users/griffithc/.gitignore
-    pager = /usr/local/share/git-core/contrib/diff-highlight/diff-highlight | less -+X -+F --mouse
+    excludesfile = /Users/christopher.griffith/.gitignore
+    pager = diffr | less -+X -+F --mouse
 [difftool "sourcetree"]
     cmd = opendiff \"$LOCAL\" \"$REMOTE\"
     path =
