--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -16,7 +16,7 @@ brew "awscli"
 brew "berkeley-db", link: true
 brew "diffr"
 brew "dnsmasq"
-brew "docker", link: false
+brew "docker"
 brew "docker-compose", link: false
 brew "fzf"
 brew "gd"
@@ -42,7 +42,6 @@ brew "libyaml"
 brew "mas"
 brew "openjdk"
 brew "maven"
-brew "mitmproxy"
 brew "neovim"
 brew "nginx"
 brew "node"
@@ -58,6 +57,7 @@ brew "rbenv"
 brew "redis"
 brew "ripgrep"
 brew "tmux"
+brew "tproxy"
 brew "trash"
 brew "vim"
 brew "watch"
@@ -65,10 +65,10 @@ brew "wget"
 brew "facebook/fb/idb-companion"
 cask "amethyst"
 cask "android-commandlinetools"
-cask "docker"
 cask "font-hack-nerd-font"
 cask "karabiner-elements"
 cask "kitty"
+cask "mitmproxy"
 cask "mos"
 cask "ngrok"
 cask "react-native-debugger"
