replaces hack w/ firacode nerd font

--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -65,7 +65,7 @@ brew "wget"
 brew "facebook/fb/idb-companion"
 cask "amethyst"
 cask "android-commandlinetools"
-cask "font-hack-nerd-font"
+cask "font-fira-code-nerd-font"
 cask "karabiner-elements"
 cask "kitty"
 cask "mitmproxy"
