--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -6,8 +6,11 @@ tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
 tap "samuelmeuli/tap"
+tap "xcodesorg/made"
 brew "libpng"
 brew "webp"
+brew "libssh2"
+brew "aria2"
 brew "pycparser"
 brew "cffi"
 brew "docutils"
@@ -15,9 +18,9 @@ brew "python@3.11"
 brew "awscli"
 brew "berkeley-db", link: true
 brew "diffr"
-brew "dnsmasq"
+brew "dnsmasq", restart_service: true
 brew "docker"
-brew "docker-compose", link: false
+brew "docker-compose"
 brew "fd"
 brew "fzf"
 brew "gd"
@@ -38,7 +41,6 @@ brew "httpie"
 brew "imagemagick"
 brew "jenv"
 brew "jq"
-brew "libssh2"
 brew "libyaml"
 brew "mas"
 brew "openjdk"
@@ -49,6 +51,7 @@ brew "node"
 brew "node-build"
 brew "nodenv"
 brew "openjdk@11"
+brew "openjdk@17"
 brew "p7zip"
 brew "perl"
 brew "python@3.10"
@@ -62,10 +65,13 @@ brew "tproxy"
 brew "trash"
 brew "vim"
 brew "watch"
+brew "watchman"
 brew "wget"
 brew "facebook/fb/idb-companion"
+brew "xcodesorg/made/xcodes"
 cask "amethyst"
 cask "android-commandlinetools"
+cask "flipper"
 cask "font-fira-code-nerd-font"
 cask "karabiner-elements"
 cask "kitty"
