adds meteorologist to Brewfile

--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -75,6 +75,7 @@ cask "flipper"
 cask "font-fira-code-nerd-font"
 cask "karabiner-elements"
 cask "kitty"
+cask "meteorologist"
 cask "mitmproxy"
 cask "mos"
 cask "ngrok"
