adds yabai and skhd

--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/cask-versions"
 tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
+tap "koekeishiya/formulae"
 tap "samuelmeuli/tap"
 tap "xcodesorg/made"
 brew "libpng"
@@ -68,6 +69,8 @@ brew "watch"
 brew "watchman"
 brew "wget"
 brew "facebook/fb/idb-companion"
+brew "koekeishiya/formulae/skhd"
+brew "koekeishiya/formulae/yabai"
 brew "xcodesorg/made/xcodes"
 cask "amethyst"
 cask "android-commandlinetools"
