--- a/package-managers/Brewfile
+++ b/package-managers/Brewfile
@@ -76,6 +76,7 @@ cask "amethyst"
 cask "android-commandlinetools"
 cask "flipper"
 cask "font-fira-code-nerd-font"
+cask "hammerspoon"
 cask "karabiner-elements"
 cask "kitty"
 cask "meteorologist"
