adds many dot files/dirs into the git ignore and telescope ignore config

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
 *~
+.android
+.bundle
+.cache
+.cocoapods
+.config
+.docker
 .DS_Store
+.flipper
 .git/
+.local
+.luarc.json
+.next
+.Trash
 .vim/
 .zcomp*
-Session.vim
-.luarc.json
 karabiner/automatic_backups/
+Session.vim
