installs tetris, asciiquarium, and cmatrix

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,18 +6,22 @@ tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
 tap "koekeishiya/formulae"
+tap "samtay/tui"
 tap "samuelmeuli/tap"
 tap "xcodesorg/made"
 brew "libpng"
 brew "webp"
 brew "libssh2"
 brew "aria2"
+brew "berkeley-db", link: true
+brew "perl"
+brew "asciiquarium"
 brew "pycparser"
 brew "cffi"
 brew "docutils"
 brew "python@3.11"
 brew "awscli"
-brew "berkeley-db", link: true
+brew "cmatrix"
 brew "diffr"
 brew "dnsmasq", restart_service: true
 brew "docker"
@@ -54,7 +58,6 @@ brew "nodenv"
 brew "openjdk@11"
 brew "openjdk@17"
 brew "p7zip"
-brew "perl"
 brew "python@3.10"
 brew "python@3.9"
 brew "ruby-build"
@@ -71,6 +74,7 @@ brew "wget"
 brew "facebook/fb/idb-companion"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
+brew "samtay/tui/tetris"
 brew "xcodesorg/made/xcodes"
 cask "android-commandlinetools"
 cask "flipper"
