--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -95,7 +95,7 @@ bind-key c new-window -c ~/projects/od-env/projects
 bind-key \" split-window -h -c "#{pane_current_path}"
 bind-key % split-window -v -c "#{pane_current_path}"
 
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf" \; display-message "tmux config reloaded"
 
 bind-key C-k kill-server
 
@@ -151,6 +151,8 @@ set -g display-time 2000
 setw -g aggressive-resize on
 
 # Plugins {{{
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_CACHE_HOME/tmux/plugins/"
 
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
