install eza and bat

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -13,7 +13,6 @@ brew "libpng"
 brew "webp"
 brew "libssh2"
 brew "aria2"
-brew "berkeley-db", link: true
 brew "perl"
 brew "asciiquarium"
 brew "pycparser"
@@ -21,11 +20,19 @@ brew "cffi"
 brew "docutils"
 brew "python@3.11"
 brew "awscli"
+brew "bat"
+brew "berkeley-db", link: true
 brew "cmatrix"
 brew "diffr"
 brew "dnsmasq", restart_service: true
 brew "docker"
 brew "docker-compose"
+brew "folly"
+brew "edencommon"
+brew "eza"
+brew "fizz"
+brew "wangle"
+brew "fb303"
 brew "fd"
 brew "fzf"
 brew "gd"
@@ -41,6 +48,7 @@ brew "gnutls"
 brew "netpbm"
 brew "librsvg"
 brew "graphviz"
+brew "python@3.12"
 brew "grip"
 brew "httpie"
 brew "imagemagick"
