replaces zshz w/ zoxide

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -79,6 +79,7 @@ brew "vim"
 brew "watch"
 brew "watchman"
 brew "wget"
+brew "zoxide"
 brew "facebook/fb/idb-companion"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
