--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,4 +1,5 @@
 tap "facebook/fb"
+tap "felixkratz/formulae"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
@@ -83,6 +84,7 @@ brew "watchman"
 brew "wget"
 brew "zoxide"
 brew "facebook/fb/idb-companion"
+brew "felixkratz/formulae/borders"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
 brew "samtay/tui/tetris"
