turns of preview for tmux-fzf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -158,6 +158,7 @@ set -g @plugin 'tmux-plugins/tpm'
 # sainnhe/tmux-fzf {{{
 TMUX_FZF_LAUNCH_KEY="F"
 TMUX_FZF_ORDER="session|window|pane|command|keybinding|clipboard|process"
+TMUX_FZF_PREVIEW=0
 TMUX_FZF_WINDOW_FORMAT="#{window_name}"
 
 bind-key "f" run -b "~/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
