updates all path references for tmux plugin path to use env var

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -161,7 +161,7 @@ TMUX_FZF_ORDER="session|window|pane|command|keybinding|clipboard|process"
 TMUX_FZF_PREVIEW=0
 TMUX_FZF_WINDOW_FORMAT="#{window_name}"
 
-bind-key "f" run -b "~/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
+bind-key "f" run -b "$TMUX_PLUGIN_MANAGER_PATH/tmux-fzf/scripts/window.sh switch"
 # }}}
 
 # tmux-plugins/tmux-continuum config {{{
@@ -179,6 +179,6 @@ set -g @prefix_highlight_prefix_prompt '--Prefix--'
 
 # }}}
 
-run -b ~/.tmux/plugins/tpm/tpm
+run -b "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
 
 # }}}
