--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -87,7 +87,7 @@ bind-key -T root WheelDownPane \
 
 set -sg escape-time 0
 
-bind-key c new-window -c ~/projects/od-env/projects
+bind-key c new-window -c ~
 
 bind-key \" split-window -h -c "#{pane_current_path}"
 bind-key % split-window -v -c "#{pane_current_path}"
