adds tmux tpm auto install if statement

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -179,6 +179,12 @@ set -g @prefix_highlight_prefix_prompt '--Prefix--'
 
 # }}}
 
+# tpm {{{
+if '[ ! -d "$XDG_DATA_HOME"/tmux/plugins/tpm ]' \
+   "run 'git clone --verbose --depth=10 https://github.com/tmux-plugins/tpm \"$XDG_DATA_HOME\"/tmux/plugins/tpm \
+    && \"$XDG_DATA_HOME\"/tmux/plugins/tpm/bin/install_plugins'"
+
 run -b "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
+# }}}
 
 # }}}
