updates Brewfile after reinstalling mobile app

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,8 +1,10 @@
 tap "facebook/fb"
 tap "felixkratz/formulae"
 tap "homebrew/bundle"
+tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
+tap "homebrew/core"
 tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
@@ -12,23 +14,24 @@ tap "samuelmeuli/tap"
 tap "xcodesorg/made"
 brew "libpng"
 brew "webp"
+brew "aom"
 brew "libssh2"
 brew "aria2"
 brew "perl"
 brew "asciiquarium"
-brew "pycparser"
-brew "cffi"
-brew "docutils"
 brew "python@3.11"
 brew "awscli"
 brew "bat"
 brew "berkeley-db", link: true
 brew "btop"
+brew "pycparser"
+brew "cffi"
 brew "cmatrix"
 brew "diffr"
 brew "dnsmasq", restart_service: true
 brew "docker"
 brew "docker-compose"
+brew "docutils"
 brew "folly"
 brew "edencommon"
 brew "eza"
@@ -37,6 +40,7 @@ brew "wangle"
 brew "fb303"
 brew "fd"
 brew "fzf"
+brew "libavif"
 brew "gd"
 brew "gdk-pixbuf"
 brew "gh"
@@ -48,6 +52,7 @@ brew "p11-kit"
 brew "unbound"
 brew "gnutls"
 brew "netpbm"
+brew "harfbuzz"
 brew "librsvg"
 brew "graphviz"
 brew "python@3.12"
