--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,7 +26,7 @@ WHITE="#aeafb0"
 BLUE__BLUE__STYLE="fg=${BLUE},bg=${BLUE}"
 BLUE__WHITE__STYLE="fg=${BLUE},bg=${WHITE}"
 LIGHT_BLUE__BLUE__STYLE="fg=${LIGHT_BLUE},bg=${BLUE}"
-WHITE__GRAY__STYLE="fg=${WHITE},bg=${GRAY}"
+WHITE_STYLE="fg=${WHITE}"
 
 BLUE__BLUE="#[fg=${BLUE},bg=${BLUE},nobold,nounderscore,noitalics]"
 BLUE__LIGHT_BLUE="#[fg=${BLUE},bg=${LIGHT_BLUE},nobold,nounderscore,noitalics]"
@@ -62,8 +62,8 @@ set -g window-status-activity-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-bell-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-last-style "${LIGHT_BLUE__BLUE__STYLE}"
 
-set -g pane-border-style "${WHITE__GRAY__STYLE}"
-set -g pane-active-border-style "${WHITE__GRAY__STYLE}"
+set -g pane-border-style "${WHITE_STYLE}"
+set -g pane-active-border-style "${WHITE_STYLE}"
 
 set -g base-index 1
 setw -g pane-base-index 1
