updates foreground color from tmux/nvim border/split to match nightfox theme's blue

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,16 +17,16 @@ ARROW_SMALL_RIGHT=""
 ARROW_LARGE_LEFT=""
 ARROW_LARGE_RIGHT=""
 
-BLUE="#131a24"
+BLUE="#131A24"
 GRAY="#303030"
-LIGHT_BLUE="#719cd6"
+LIGHT_BLUE="#719CD6"
 DARK_BLUE="#192330"
-WHITE="#aeafb0"
+WHITE="#AEAFB0"
 
 BLUE__BLUE__STYLE="fg=${BLUE},bg=${BLUE}"
 BLUE__WHITE__STYLE="fg=${BLUE},bg=${WHITE}"
 LIGHT_BLUE__BLUE__STYLE="fg=${LIGHT_BLUE},bg=${BLUE}"
-WHITE_STYLE="fg=${WHITE}"
+LIGHT_BLUE_STYLE="fg=${LIGHT_BLUE}"
 
 BLUE__BLUE="#[fg=${BLUE},bg=${BLUE},nobold,nounderscore,noitalics]"
 BLUE__LIGHT_BLUE="#[fg=${BLUE},bg=${LIGHT_BLUE},nobold,nounderscore,noitalics]"
@@ -62,8 +62,8 @@ set -g window-status-activity-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-bell-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-last-style "${LIGHT_BLUE__BLUE__STYLE}"
 
-set -g pane-border-style "${WHITE_STYLE}"
-set -g pane-active-border-style "${WHITE_STYLE}"
+set -g pane-border-style "${LIGHT_BLUE_STYLE}"
+set -g pane-active-border-style "${LIGHT_BLUE_STYLE}"
 
 set -g base-index 1
 setw -g pane-base-index 1
