updates Brewfile after installing JDK julu17 and scrcpy

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,10 +1,8 @@
 tap "facebook/fb"
 tap "felixkratz/formulae"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
@@ -39,20 +37,20 @@ brew "fizz"
 brew "wangle"
 brew "fb303"
 brew "fd"
+brew "p11-kit"
+brew "unbound"
+brew "gnutls"
+brew "harfbuzz"
+brew "openjpeg"
 brew "fzf"
 brew "libavif"
 brew "gd"
 brew "gdk-pixbuf"
 brew "gh"
-brew "openjpeg"
 brew "ghostscript"
 brew "git"
 brew "git-flow"
-brew "p11-kit"
-brew "unbound"
-brew "gnutls"
 brew "netpbm"
-brew "harfbuzz"
 brew "librsvg"
 brew "graphviz"
 brew "python@3.12"
@@ -80,6 +78,7 @@ brew "ruby-build"
 brew "rbenv"
 brew "redis"
 brew "ripgrep"
+brew "scrcpy"
 brew "starship"
 brew "tmux"
 brew "tproxy"
@@ -106,6 +105,7 @@ cask "mos"
 cask "ngrok"
 cask "react-native-debugger"
 cask "temurin"
+cask "zulu17"
 mas "Forecast Bar", id: 982710545
 mas "GarageBand", id: 682658836
 mas "Microsoft Remote Desktop", id: 1295203466
