updates starship styling/placment for swift

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -10,6 +10,7 @@ $lua\
 $gradle\
 $java\
 $ruby\
+$swift\
 $dotnet\
 $nodejs\
 $character"""
@@ -60,5 +61,9 @@ Macos = ' '
 
 [ruby]
 disabled = false
+format = '[$symbol$version]($style) '
+style = 'fg:#719cd6'
+
+[swift]
 format = '[$symbol$version]($style) '
 style = 'fg:#719cd6'
