undoes color of the NodeJS symbol for starship

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -51,7 +51,7 @@ disabled = false
 format = '$symbol '
 
 [nodejs]
-format = '[$symbol$version]($style) '
+format = '$symbol[$version]($style) '
 style = 'fg:#719cd6'
 
 [os]
