updates styling of tmux status bar including showing the path of the current directory

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,6 +17,9 @@ ARROW_SMALL_RIGHT=""
 ARROW_LARGE_LEFT=""
 ARROW_LARGE_RIGHT=""
 
+HALF_CIRCLE_LEFT=""
+HALF_CIRCLE_RIGHT=""
+
 BLUE="#131A24"
 GRAY="#303030"
 LIGHT_BLUE="#719CD6"
@@ -44,18 +47,18 @@ set -g mode-style "${BLUE__WHITE__STYLE}"
 set -g message-style "${BLUE__WHITE__STYLE}"
 set -g message-command-style "${BLUE__WHITE__STYLE}"
 
-set -g status-left "${BLUE__LIGHT_BLUE} #S ${LIGHT_BLUE__BLUE}${ARROW_LARGE_RIGHT}"
+set -g status-left "${BLUE__LIGHT_BLUE} #S ${LIGHT_BLUE__BLUE}${HALF_CIRCLE_RIGHT}"
 set -g status-left-length "100"
 set -g status-left-style NONE
-set -g status-right ""
-set -g status-right-length "0"
+set -g status-right "${LIGHT_BLUE__BLUE}${HALF_CIRCLE_LEFT}${BLUE__LIGHT_BLUE} #("$XDG_DATA_HOME/tmux/scripts/truncate_path.sh" #{pane_current_path} 40) "
+set -g status-right-length "50"
 set -g status-right-style NONE
 set -g status-style "${BLUE__BLUE__STYLE}"
 
 set -g window-status-separator ""
 set -g window-status-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-format " ${WINDOW_NUMBER} ${ARROW_SMALL_RIGHT} ${WINDOW_NAME} ${BLUE__BLUE}${ARROW_LARGE_RIGHT}"
-set -g window-status-current-format "${BLUE__WHITE}${ARROW_LARGE_RIGHT}${BLUE__WHITE__BOLD} ${WINDOW_NUMBER} ${ARROW_SMALL_RIGHT} ${WINDOW_NAME} ${WINDOW_FLAGS} ${WHITE__BLUE}${ARROW_LARGE_RIGHT}"
+set -g window-status-current-format "${WHITE__BLUE}${HALF_CIRCLE_LEFT}${BLUE__WHITE__BOLD}${WINDOW_NUMBER} ${ARROW_SMALL_RIGHT} ${WINDOW_NAME} ${WINDOW_FLAGS} ${WHITE__BLUE}${HALF_CIRCLE_RIGHT}"
 
 set -g window-status-current-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-activity-style "${LIGHT_BLUE__BLUE__STYLE}"
