updates tmux status bar w/ small circles

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,8 @@ ARROW_LARGE_RIGHT=""
 
 HALF_CIRCLE_LEFT=""
 HALF_CIRCLE_RIGHT=""
+HALF_CIRCLE_SMALL_RIGHT=""
+HALF_CIRCLE_SMALL_LEFT=""
 
 BLUE="#131A24"
 GRAY="#303030"
@@ -57,8 +59,8 @@ set -g status-style "${BLUE__BLUE__STYLE}"
 
 set -g window-status-separator ""
 set -g window-status-style "${LIGHT_BLUE__BLUE__STYLE}"
-set -g window-status-format " ${WINDOW_NUMBER} ${ARROW_SMALL_RIGHT} ${WINDOW_NAME} ${BLUE__BLUE}${ARROW_LARGE_RIGHT}"
-set -g window-status-current-format "${WHITE__BLUE}${HALF_CIRCLE_LEFT}${BLUE__WHITE__BOLD}${WINDOW_NUMBER} ${ARROW_SMALL_RIGHT} ${WINDOW_NAME} ${WINDOW_FLAGS} ${WHITE__BLUE}${HALF_CIRCLE_RIGHT}"
+set -g window-status-format " ${HALF_CIRCLE_SMALL_LEFT}${WINDOW_NUMBER}${HALF_CIRCLE_SMALL_RIGHT} ${WINDOW_NAME} ${BLUE__BLUE}${ARROW_LARGE_RIGHT}"
+set -g window-status-current-format "${WHITE__BLUE}${HALF_CIRCLE_LEFT}${BLUE__WHITE__BOLD}${HALF_CIRCLE_SMALL_LEFT}${WINDOW_NUMBER}${HALF_CIRCLE_SMALL_RIGHT} ${WINDOW_NAME} ${WINDOW_FLAGS} ${WHITE__BLUE}${HALF_CIRCLE_RIGHT}"
 
 set -g window-status-current-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-activity-style "${LIGHT_BLUE__BLUE__STYLE}"
