--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,8 +52,8 @@ set -g message-command-style "${BLUE__WHITE__STYLE}"
 set -g status-left "${BLUE__LIGHT_BLUE} #S ${LIGHT_BLUE__BLUE}${HALF_CIRCLE_RIGHT}"
 set -g status-left-length "100"
 set -g status-left-style NONE
-set -g status-right "${LIGHT_BLUE__BLUE}${HALF_CIRCLE_LEFT}${BLUE__LIGHT_BLUE} #("$XDG_DATA_HOME/tmux/scripts/truncate_path.sh" #{pane_current_path} 40) "
-set -g status-right-length "50"
+set -g status-right ""
+set -g status-right-length "0"
 set -g status-right-style NONE
 set -g status-style "${BLUE__BLUE__STYLE}"
 
