updates format of git status diverged to include behind/ahead counts

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -38,6 +38,7 @@ deleted_style = 'fg:#9d79d6'
 [git_status]
 ahead = '⇡$count'
 behind = '⇣$count'
+diverged = '⇕$behind_count⇣$ahead_count⇡'
 style = 'fg:#9d79d6'
 
 [gradle]
